// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-date-interval-field Renders \`c-date-interval-field\` with custom props 1`] = `
<div
  class="c-date-interval c-date-interval--column"
>
  <c-date-picker-field-stub
    allowed-dates="() => {}"
    disabled="true"
    hide-details="hide-details"
    label="From"
    value="today-1d"
  />
  <c-date-picker-field-stub
    allowed-dates="() => {}"
    content-class="[object Object]"
    disabled="true"
    hide-details="hide-details"
    label="To"
    value="today"
  />
</div>
`;

exports[`c-date-interval-field Renders \`c-date-interval-field\` with default props 1`] = `
<div
  class="c-date-interval"
>
  <c-date-picker-field-stub
    hide-details="hide-details"
    label="From"
    value="now-12h"
  />
  <c-date-picker-field-stub
    content-class="[object Object]"
    hide-details="hide-details"
    label="To"
    value="now"
  />
</div>
`;
